6-6 完成了订单所有功能

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "axios": "^0.18.0",
     "element-ui": "^2.4.11",
+    "v-distpicker": "^1.1.0",
     "vue": "^2.5.17",
+    "vue-baidu-map": "^0.21.16",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
