--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "echarts": "^4.2.0-rc.2",
     "element-ui": "^2.4.11",
     "v-distpicker": "^1.1.0",
     "vue": "^2.5.17",
     "vue-baidu-map": "^0.21.16",
+    "vue-echarts": "^4.0.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
