7-2 集成了富文本编辑器

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue": "^2.5.17",
     "vue-baidu-map": "^0.21.16",
     "vue-echarts": "^4.0.1",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
