--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "dzh-tree-grid": "^1.0.0",
     "echarts": "^4.2.0-rc.2",
+    "element-tree-grid": "^0.1.3",
     "element-ui": "^2.4.11",
     "v-distpicker": "^1.1.0",
     "vue": "^2.5.17",
